--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/love-svgrepo-com.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/Ruth2.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Happy Birthday Ruth
-      
+
     </title>
   </head>
   <body>
